[project]
name = "utils"
version = "0.1.0"
description = "Personal utility commands for various tasks"
authors = [
    {name = "LuluBeatson", email = "lulu.beatson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"